Avoid buttons to overflow the list item

--- a/ecotaxi-frontend/app/css/widget_list.sass
+++ b/ecotaxi-frontend/app/css/widget_list.sass
@@ -11,10 +11,14 @@
             @extend .boxFlex1
             text-align: center
             padding: 5px
+            button
+                max-width: 100%
+                font-size: 100%
         .itemField:first-child
             text-align: left
         .itemField:last-child
             text-align: right
+
 
 //Styles for Reception Trips Lists
 .tripsReceptionList
